--- a/app/src/main/res/layout/select_category_for_board_activity_layout.xml
+++ b/app/src/main/res/layout/select_category_for_board_activity_layout.xml
@@ -33,7 +33,9 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="126dp"
             android:layout_marginBottom="50dp"
-            android:id="@+id/categorySpinner">
+            android:id="@+id/categorySpinner"
+            android:entries="@array/categories"
+            >
 
         </Spinner >
 
